generated/checkers/gen/AllGen-Null-Pointer-Dereference-2e29b9971ac54dec88baa58856a230ec2f2a2dff/build_logs/syntax-repair-03/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::ento::MemRegion* {anonymous}::SAGENTestChecker_getMemRegionFromVarDecl(const clang::VarDecl*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:108:34: error: ‘class clang::ento::SValBuilder’ has no member named ‘getLValue’; did you mean ‘getMinValue’?
  108 |   SVal LVal = C.getSValBuilder().getLValue(VD, C.getLocationContext());
      |                                  ^~~~~~~~~
      |                                  getMinValue
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::CompoundStmt* {anonymous}::SAGenTestChecker::getEnclosingBlock(const clang::Stmt*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:183:10: error: ‘SAGENTestChecker_getEnclosingBlockImpl’ was not declared in this scope; did you mean ‘SAGenTestChecker_getEnclosingBlockImpl’?
  183 |   return SAGENTestChecker_getEnclosingBlockImpl(S, C);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |          SAGenTestChecker_getEnclosingBlockImpl
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:178:21: warning: ‘const clang::CompoundStmt* {anonymous}::SAGenTestChecker_getEnclosingBlockImpl(const clang::Stmt*, clang::ento::CheckerContext&)’ defined but not used [-Wunused-function]
  178 | const CompoundStmt *SAGenTestChecker_getEnclosingBlockImpl(const Stmt *S, CheckerContext &C) {
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
